// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array [...] parses dangling comma: [1, 2,] 1`] = `
array (1:0-1:7)
  other (1:1-1:2) 1
  other (1:4-1:5) 2
`;

exports[`array [...] parses empty: [] 1`] = `
array (1:0-1:2)

`;

exports[`array [...] parses leading commas: [,, foo] 1`] = `
array (1:0-1:8)


  other (1:4-1:7) foo
`;

exports[`array [...] parses multiple elements: [1, 2] 1`] = `
array (1:0-1:6)
  other (1:1-1:2) 1
  other (1:4-1:5) 2
`;

exports[`array [...] parses single elemement: [1] 1`] = `
array (1:0-1:3)
  other (1:1-1:2) 1
`;
